// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`auto-install symlinks (and junctions) are created correctly in the install cache 1`] = `
"{
  name: "is-number",
  version: "2.0.0",
}
"
`;

exports[`text lockfile workspace sorting 1`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 1,
  "workspaces": {
    "": {
      "name": "foo",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
    "packages/b": {
      "name": "b",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
    "packages/c": {
      "name": "c",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
  },
  "packages": {
    "b": ["b@workspace:packages/b"],

    "c": ["c@workspace:packages/c"],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],
  }
}
"
`;

exports[`text lockfile workspace sorting 2`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 1,
  "workspaces": {
    "": {
      "name": "foo",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
    "packages/a": {
      "name": "a",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
    "packages/b": {
      "name": "b",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
    "packages/c": {
      "name": "c",
      "dependencies": {
        "no-deps": "1.0.0",
      },
    },
  },
  "packages": {
    "a": ["a@workspace:packages/a"],

    "b": ["b@workspace:packages/b"],

    "c": ["c@workspace:packages/c"],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],
  }
}
"
`;

exports[`text lockfile --frozen-lockfile 1`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 1,
  "workspaces": {
    "": {
      "name": "foo",
      "dependencies": {
        "a-dep": "^1.0.2",
        "no-deps": "^1.0.0",
      },
    },
    "packages/pkg1": {
      "name": "package1",
      "dependencies": {
        "peer-deps-too": "1.0.0",
      },
    },
  },
  "packages": {
    "a-dep": ["a-dep@1.0.10", "http://localhost:1234/a-dep/-/a-dep-1.0.10.tgz", {}, "sha512-NeQ6Ql9jRW8V+VOiVb+PSQAYOvVoSimW+tXaR0CoJk4kM9RIk/XlAUGCsNtn5XqjlDO4hcH8NcyaL507InevEg=="],

    "no-deps": ["no-deps@1.1.0", "http://localhost:1234/no-deps/-/no-deps-1.1.0.tgz", {}, "sha512-ebG2pipYAKINcNI3YxdsiAgFvNGp2gdRwxAKN2LYBm9+YxuH/lHH2sl+GKQTuGiNfCfNZRMHUyyLPEJD6HWm7w=="],

    "package1": ["package1@workspace:packages/pkg1"],

    "peer-deps-too": ["peer-deps-too@1.0.0", "http://localhost:1234/peer-deps-too/-/peer-deps-too-1.0.0.tgz", { "peerDependencies": { "no-deps": "*" } }, "sha512-sBx0TKrsB8FkRN2lzkDjMuctPGEKn1TmNUBv3dJOtnZM8nd255o5ZAPRpAI2XFLHZAavBlK/e73cZNwnUxlRog=="],
  }
}
"
`;

exports[`binaries each type of binary serializes correctly to text lockfile 1`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 1,
  "workspaces": {
    "": {
      "name": "foo",
      "dependencies": {
        "dir-bin": "./dir-bin",
        "file-bin": "./file-bin",
        "map-bin": "./map-bin",
        "named-file-bin": "./named-file-bin",
      },
    },
  },
  "packages": {
    "dir-bin": ["dir-bin@file:dir-bin", { "binDir": "./bins" }],

    "file-bin": ["file-bin@file:file-bin", { "bin": "./file-bin.js" }],

    "map-bin": ["map-bin@file:map-bin", { "bin": { "map-bin-1": "./map-bin-1.js", "map-bin-2": "./map-bin-2.js" } }],

    "named-file-bin": ["named-file-bin@file:named-file-bin", { "bin": { "named-file-bin": "./named-file-bin.js" } }],
  }
}
"
`;

exports[`binaries root resolution bins 1`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 0,
  "workspaces": {
    "": {
      "name": "fooooo",
      "dependencies": {
        "fooooo": ".",
        "no-deps": "1.0.0",
      },
    },
  },
  "packages": {
    "fooooo": ["fooooo@root:", { "bin": "fooooo.js" }],

    "no-deps": ["no-deps@1.0.0", "http://localhost:1234/no-deps/-/no-deps-1.0.0.tgz", {}, "sha512-v4w12JRjUGvfHDUP8vFDwu0gUWu04j0cv9hLb1Abf9VdaXu4XcrddYFTMVBVvmldKViGWH7jrb6xPJRF0wq6gw=="],
  }
}
"
`;

exports[`hoisting text lockfile is hoisted 1`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 1,
  "workspaces": {
    "": {
      "name": "foo",
      "dependencies": {
        "hoist-lockfile-1": "1.0.0",
        "hoist-lockfile-2": "1.0.0",
        "hoist-lockfile-3": "1.0.0",
      },
    },
  },
  "packages": {
    "hoist-lockfile-1": ["hoist-lockfile-1@1.0.0", "http://localhost:1234/hoist-lockfile-1/-/hoist-lockfile-1-1.0.0.tgz", { "dependencies": { "hoist-lockfile-shared": "*" } }, "sha512-E2nwR7egMFDoYjeRno7CAa59kiwkLGfhTFy2Q335JWp2r2bDkwoAt1LdChd5PdGYkbo7SfViHkW44ga+WXA+eA=="],

    "hoist-lockfile-2": ["hoist-lockfile-2@1.0.0", "http://localhost:1234/hoist-lockfile-2/-/hoist-lockfile-2-1.0.0.tgz", { "dependencies": { "hoist-lockfile-shared": "^1.0.1" } }, "sha512-7iNRBJF/U078n9oZW7aDvVLkA7+076a2ONEFvITpjKdhT07KWaBei0SzHkFYW4f3foGZPNlHsv0aAgk949TPJg=="],

    "hoist-lockfile-3": ["hoist-lockfile-3@1.0.0", "http://localhost:1234/hoist-lockfile-3/-/hoist-lockfile-3-1.0.0.tgz", { "dependencies": { "hoist-lockfile-shared": ">=1.0.1" } }, "sha512-iGz7jH7jxz/zq4OZM8hhT7kUX2Ye1m+45SoyMVcWTM7ZB+cY306Ff1mQePKTjkn84/pJMITMdRgDv/qF8PuQUw=="],

    "hoist-lockfile-shared": ["hoist-lockfile-shared@2.0.2", "http://localhost:1234/hoist-lockfile-shared/-/hoist-lockfile-shared-2.0.2.tgz", {}, "sha512-xPWoyP8lv+/JrbClRzhJx1eUsHqDflSTmWOxx82xvMIEs6mbiIuvIp3/L+Ojc6mqex6y426h7L5j0hjLZE3V9w=="],

    "hoist-lockfile-2/hoist-lockfile-shared": ["hoist-lockfile-shared@1.0.2", "http://localhost:1234/hoist-lockfile-shared/-/hoist-lockfile-shared-1.0.2.tgz", {}, "sha512-p7IQ/BbkTRLG/GUx6j2cDQ+vTUc/v9OW9Ss9igh/GFysbr0Qjriz/DiETnISkxYaTFitqOkUSOUkEKyeLNJsfQ=="],
  }
}
"
`;

exports[`outdated normal dep, smaller than column title 1`] = `
"┌──────────┬─────────┬────────┬────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m  │ \x1B[1m\x1B[34mCurrent\x1B[0m │ \x1B[1m\x1B[34mUpdate\x1B[0m │ \x1B[1m\x1B[34mLatest\x1B[0m │
├──────────┼─────────┼────────┼────────┤
│ no-deps\x1B[2m\x1B[0m  │ 1.0.0   │ \x1B[2m1.0.0\x1B[0m  │ \x1B[0m\x1B[1m\x1B[31m2.0.0\x1B[0m  │
└──────────┴─────────┴────────┴────────┘
"
`;

exports[`outdated normal dep, larger than column title 1`] = `
"┌───────────────┬────────────────┬────────────────┬────────────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m       │ \x1B[1m\x1B[34mCurrent\x1B[0m        │ \x1B[1m\x1B[34mUpdate\x1B[0m         │ \x1B[1m\x1B[34mLatest\x1B[0m         │
├───────────────┼────────────────┼────────────────┼────────────────┤
│ prereleases-1\x1B[2m\x1B[0m │ 1.0.0-future.1 │ \x1B[2m1.0.0-future.1\x1B[0m │ \x1B[2m1.0.0-future.\x1B[0m\x1B[1m\x1B[31m4\x1B[0m │
└───────────────┴────────────────┴────────────────┴────────────────┘
"
`;

exports[`outdated dev dep, smaller than column title 1`] = `
"┌───────────────┬─────────┬────────┬────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m       │ \x1B[1m\x1B[34mCurrent\x1B[0m │ \x1B[1m\x1B[34mUpdate\x1B[0m │ \x1B[1m\x1B[34mLatest\x1B[0m │
├───────────────┼─────────┼────────┼────────┤
│ no-deps\x1B[2m (dev)\x1B[0m │ 1.0.0   │ \x1B[2m1.0.0\x1B[0m  │ \x1B[0m\x1B[1m\x1B[31m2.0.0\x1B[0m  │
└───────────────┴─────────┴────────┴────────┘
"
`;

exports[`outdated dev dep, larger than column title 1`] = `
"┌─────────────────────┬────────────────┬────────────────┬────────────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m             │ \x1B[1m\x1B[34mCurrent\x1B[0m        │ \x1B[1m\x1B[34mUpdate\x1B[0m         │ \x1B[1m\x1B[34mLatest\x1B[0m         │
├─────────────────────┼────────────────┼────────────────┼────────────────┤
│ prereleases-1\x1B[2m (dev)\x1B[0m │ 1.0.0-future.1 │ \x1B[2m1.0.0-future.1\x1B[0m │ \x1B[2m1.0.0-future.\x1B[0m\x1B[1m\x1B[31m4\x1B[0m │
└─────────────────────┴────────────────┴────────────────┴────────────────┘
"
`;

exports[`outdated peer dep, smaller than column title 1`] = `
"┌────────────────┬─────────┬────────┬────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m        │ \x1B[1m\x1B[34mCurrent\x1B[0m │ \x1B[1m\x1B[34mUpdate\x1B[0m │ \x1B[1m\x1B[34mLatest\x1B[0m │
├────────────────┼─────────┼────────┼────────┤
│ no-deps\x1B[2m (peer)\x1B[0m │ 1.0.0   │ \x1B[2m1.0.0\x1B[0m  │ \x1B[0m\x1B[1m\x1B[31m2.0.0\x1B[0m  │
└────────────────┴─────────┴────────┴────────┘
"
`;

exports[`outdated peer dep, larger than column title 1`] = `
"┌──────────────────────┬────────────────┬────────────────┬────────────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m              │ \x1B[1m\x1B[34mCurrent\x1B[0m        │ \x1B[1m\x1B[34mUpdate\x1B[0m         │ \x1B[1m\x1B[34mLatest\x1B[0m         │
├──────────────────────┼────────────────┼────────────────┼────────────────┤
│ prereleases-1\x1B[2m (peer)\x1B[0m │ 1.0.0-future.1 │ \x1B[2m1.0.0-future.1\x1B[0m │ \x1B[2m1.0.0-future.\x1B[0m\x1B[1m\x1B[31m4\x1B[0m │
└──────────────────────┴────────────────┴────────────────┴────────────────┘
"
`;

exports[`outdated optional dep, smaller than column title 1`] = `
"┌────────────────────┬─────────┬────────┬────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m            │ \x1B[1m\x1B[34mCurrent\x1B[0m │ \x1B[1m\x1B[34mUpdate\x1B[0m │ \x1B[1m\x1B[34mLatest\x1B[0m │
├────────────────────┼─────────┼────────┼────────┤
│ no-deps\x1B[2m (optional)\x1B[0m │ 1.0.0   │ \x1B[2m1.0.0\x1B[0m  │ \x1B[0m\x1B[1m\x1B[31m2.0.0\x1B[0m  │
└────────────────────┴─────────┴────────┴────────┘
"
`;

exports[`outdated optional dep, larger than column title 1`] = `
"┌──────────────────────────┬────────────────┬────────────────┬────────────────┐
│ \x1B[1m\x1B[34mPackage\x1B[0m                  │ \x1B[1m\x1B[34mCurrent\x1B[0m        │ \x1B[1m\x1B[34mUpdate\x1B[0m         │ \x1B[1m\x1B[34mLatest\x1B[0m         │
├──────────────────────────┼────────────────┼────────────────┼────────────────┤
│ prereleases-1\x1B[2m (optional)\x1B[0m │ 1.0.0-future.1 │ \x1B[2m1.0.0-future.1\x1B[0m │ \x1B[2m1.0.0-future.\x1B[0m\x1B[1m\x1B[31m4\x1B[0m │
└──────────────────────────┴────────────────┴────────────────┴────────────────┘
"
`;

exports[`outdated NO_COLOR works 1`] = `
"|--------------------------------------|
| Package  | Current | Update | Latest |
|----------|---------|--------|--------|
| a-dep    | 1.0.1   | 1.0.1  | 1.0.10 |
|--------------------------------------|
"
`;

exports[`it should ignore peerDependencies within workspaces 1`] = `
"{
  "lockfileVersion": 1,
  "configVersion": 1,
  "workspaces": {
    "": {
      "name": "foo",
      "peerDependencies": {
        "no-deps": ">=1.0.0",
      },
    },
    "packages/baz": {
      "name": "Baz",
      "peerDependencies": {
        "a-dep": ">=1.0.1",
      },
    },
  },
  "packages": {
    "Baz": ["Baz@workspace:packages/baz"],

    "a-dep": ["a-dep@1.0.10", "http://localhost:1234/a-dep/-/a-dep-1.0.10.tgz", {}, "sha512-NeQ6Ql9jRW8V+VOiVb+PSQAYOvVoSimW+tXaR0CoJk4kM9RIk/XlAUGCsNtn5XqjlDO4hcH8NcyaL507InevEg=="],

    "no-deps": ["no-deps@2.0.0", "http://localhost:1234/no-deps/-/no-deps-2.0.0.tgz", {}, "sha512-W3duJKZPcMIG5rA1io5cSK/bhW9rWFz+jFxZsKS/3suK4qHDkQNxUTEXee9/hTaAoDCeHWQqogukWYKzfr6X4g=="],
  }
}
"
`;

exports[`duplicate dependency in optionalDependencies maintains sort order 1`] = `
"# THIS IS AN AUTOGENERATED FILE. DO NOT EDIT THIS FILE DIRECTLY.
# yarn lockfile v1
# bun ./bun.lockb --hash: A1A17280329F8383-20d6659d9c0623de-94508CB3B7915517-4b22a59b37f2f4f6


"@types/is-number@>=1.0.0":
  version "2.0.0"
  resolved "http://localhost:4873/@types/is-number/-/is-number-2.0.0.tgz"
  integrity sha512-GEeIxCB+NpM1NrDBqmkYPeU8bI//i+xPzdOY4E1YHet51IcFmz4js6k57m69fLl/cbn7sOR7wj9RNNw53X8AiA==

a-dep@1.0.1:
  version "1.0.1"
  resolved "http://localhost:4873/a-dep/-/a-dep-1.0.1.tgz"
  integrity sha512-6nmTaPgO2U/uOODqOhbjbnaB4xHuZ+UB7AjKUA3g2dT4WRWeNxgp0dC8Db4swXSnO5/uLLUdFmUJKINNBO/3wg==

duplicate-optional@1.0.1:
  version "1.0.1"
  resolved "http://localhost:4873/duplicate-optional/-/duplicate-optional-1.0.1.tgz"
  integrity sha512-tL28+yJiTPehPLq7QnOu9jbRBpRgfBkyTVveaJojKcyae2khKuLaPRvsiX5gXv+iNGpYiYcNnV1eDBLXS+L85A==
  dependencies:
    a-dep "1.0.1"
    what-bin "1.0.0"
  optionalDependencies:
    no-deps "1.0.1"

no-deps@1.0.1, no-deps@^1.0.0:
  version "1.0.1"
  resolved "http://localhost:4873/no-deps/-/no-deps-1.0.1.tgz"
  integrity sha512-3X6cn4+UJdXJuLPu11v8i/fGLe2PdI6v1yKTELam04lY5esCAFdG/qQts6N6rLrL6g1YRq+MKBAwxbmUQk355A==

two-range-deps@1.0.0:
  version "1.0.0"
  resolved "http://localhost:4873/two-range-deps/-/two-range-deps-1.0.0.tgz"
  integrity sha512-N+6kPy/GxuMncNz/EKuIrwdoYbh1qmvHDnw1UbM3sQE184kBn+6qAQgtf1wgT9dJnt6X+tWcTzSmfDvtJikVBA==
  dependencies:
    no-deps "^1.0.0"
    "@types/is-number" ">=1.0.0"

what-bin@1.0.0:
  version "1.0.0"
  resolved "http://localhost:4873/what-bin/-/what-bin-1.0.0.tgz"
  integrity sha512-sa99On1k5aDqCvpni/TQ6rLzYprUWBlb8fNwWOzbjDlM24fRr7FKDOuaBO/Y9WEIcZuzoPkCW5EkBCpflj8REQ==
"
`;
